# dew

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  dewargs.h  dewlog.h
scripts/: coverage.sh
tests/: CMakeLists.txt  test_dewlog.c
